<resources>
    <string name="app_name" translatable="false">ConvertX</string>
    <string name="copy2clipboard">Copy</string>
    <string name="clear">Clear</string>
    <string name="cleared">Cleared</string>
    <string name="copied2clipboard">Copied to clipboard</string>
    <string name="clear_all">Clear all</string>
    <string name="convert">Convert</string>
    <string name="dr_other">Other encoders and hashes</string>
    <string name="explore_git_src">Explore the source</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dr_unicode">Unicode decoder</string>
    <string name="dr_base64">Base64 decoder</string>
    <string name="dr_hex">HEX decoder</string>
    <string name="dr_rgb">RGB Decoder (35%)</string>
    <string name="dr_other1">Other tools</string>
    <string name="git_hub">GitHub</string>
    <string name="changelog">History of changes</string>
    <string name="about_program">About the program</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="checksum_crc">CRC32 checksum</string>
    <string name="checksum_adler32">Adler 32</string>
    <string name="checksum_md">MD…SHA</string>
    <string name="hint_unicode">Unicode</string>
    <string name="hint_utf">Plain text</string>
    <string name="hint_hex">HEX</string>
    <string name="hint_base64">Base64</string>
    <string name="hint_adler32">Adler32</string>
    <string name="hint_crc">CRC</string>
    <string name="hint_md_sha">MD5…SHA</string>
    <string name="forpda">4pda</string>
    <string name="explore_git_disclaimer">Source codes can be downloaded from 2 places: 4pda and GitHub.\n\nSometimes 4pda sources are
        fresh, so check both options</string>
    <string name="CrashTitle">ConvertX crashed!</string>
    <string name="CrashText">An unexpected error occurred that stopped the application. Help fix it by submitting a bug report</string>
    <string name="CrashWriteComment">What caused the error? Enter your comment in the input field</string>
    <string name="CrashThanks">Thank you! You helped me a lot!</string>
    <string name="text_moved_correct">Text moved to correct field</string>
    <string name="title_activity_regex_dragon">RegexDragon</string>
    <string name="spur">Spur</string>
    <string name="insert_regex">Enter Regexp!</string>
    <string name="insert_regex_exp">Enter a regular expression in the first field</string>
    <string name="one_match">" coincidence"</string>
    <string name="more_matches">"Match: "</string>
    <string name="illegal_syntax1">Invalid syntax!\n</string>
    <string name="illegal_syntax2">\nThe error is marked with a ^\nCheck that the regexp is correct</string>
    <string name="spur_caption">Small spur on regex</string>
    <string name="title_activity_color_pallete">HEX color palette</string>
    <string name="title_activity_about_fragment">AboutFragment</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="about_author">about the author</string>
    <string name="about_content">Text about the author</string>
    <string name="unescape_xml">Unescape xml</string>
    <string name="dr_hex_palette">Color picker in HEX</string>
    <string name="timestamp_converter">Timestamp converter</string>
    <string name="flags">Flags</string>
    <string name="cur_timestamp">Current Timestamp</string>
    <string name="shortcut_hex_palette">HEX palette</string>
    <string name="refresh">Refresh</string>
    <string name="articles">Articles</string>
    <string name="ok">OK</string>
    <string name="rgb_small_converter">RGB converter</string>
    <string name="clear_cache">Clear cache</string>
    <string name="link">Link</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dr_close_app">Close application</string>
    <string name="dr_regex_dragon">Regular expressions</string>
    <string name="md_sha">MD/SHA</string>
    <string name="regex_flags_title">regex flags</string>
    <string name="incorrect_hex_int">Invalid number!</string>
    <string name="main_colors">Decor</string>
    <string name="night_theme">Dark theme</string>
    <string name="day_theme">light theme</string>
    <string name="st1">Android Developers - Matcher</string>
    <string name="st2">Android Developers - Pattern</string>
    <string name="st3">Regex intro</string>
    <string name="st4">Beginner\'s Guide Part I (HabraHabr)</string>
    <string name="st5">Beginner\'s Guide Part II (HabraHabr)</string>
    <string name="st6">Regex I (IBM)</string>
    <string name="st7">Regex II (IBM)</string>
    <string name="dr_history">Story</string>
    <string name="press_back_once_more">Press again to exit</string>
    <string name="hint_timestamp">timestamp</string>
    <string name="xml">XML</string>
    <string name="dlg_font_size">Font size</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="activity_palette">Palette</string>
    <string name="reset">Reset</string>
    <string name="cur_value">Raven:</string>
    <string name="app_theme_dark_toolbar">Dark (with dark toolbar)</string>
    <string name="paste">Insert</string>
    <string name="text_font_size">Text font size</string>
    <string name="text_color">Text color</string>
    <string name="background_color">Background color</string>
    <string name="dr_fonts_tester">Font test</string>
    <string name="cancel">Cancel</string>
    <string name="enter_text">Enter text</string>
    <string name="font_color">Text color</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_fontsize">Input fields font size</string>
    <string name="settings_twicebtn">Double tap to exit</string>
    <string name="settings_ct_themes">General</string>
    <string name="settings_ct_interact">Interaction</string>
    <string name="hint_regexp">Regular expression</string>
    <string name="hint_test_string">Text to check</string>
    <string name="hint_matches">Matches:</string>
</resources>