<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/unicode_dec"
            android:title="@string/dr_unicode"
            android:icon="@drawable/ic_dr_unicode"/>
        <item
            android:id="@+id/base64_dec"
            android:title="@string/dr_base64"
            android:icon="@drawable/ic_dr_base64"/>
        <item
            android:id="@+id/hex_dec"
            android:title="@string/dr_hex"
            android:icon="@drawable/ic_dr_hex"/>
        <item
            android:id="@+id/hex_palette"
            android:title="@string/dr_hex_palette"
            android:icon="@drawable/ic_dr_palette"/>
        <item
            android:id="@+id/regex_dragon"
            android:title="@string/title_activity_regex_dragon"
            android:icon="@drawable/ic_dr_regexdragon"/>
        <item
            android:id="@+id/rgb_dec"
            android:visible="false"
            android:enabled="true"
            android:title="@string/dr_rgb" />
        <item
            android:id="@+id/other_dec"
            android:title="@string/dr_other1"
            android:icon="@drawable/ic_dr_other_coders"/>
    </group>


    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/settings_act"
                android:title="@string/settings"
                android:icon="@drawable/ic_dr_settings"/>
            <item
                android:id="@+id/nav_about"
                android:title="@string/about_program"
                android:icon="@drawable/ic_dr_about"/>
        </menu>
    </item>

</menu>
