<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

            <EditText
                android:id="@+id/regex_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_regexp"
                android:paddingBottom="@dimen/dp16"
                android:maxLines="1"/>

            <EditText
                android:layout_marginTop="@dimen/dp16"
                android:id="@+id/plain_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp16"
                android:hint="@string/hint_test_string"
                android:maxLines="2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="monospace"
            android:id="@+id/regex_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp8"
            android:layout_weight="1"
            android:text="@string/hint_matches"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regex_flags"
            android:fontFamily="monospace"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="end"/>
    </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:id="@+id/regex_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="monospace"
                android:paddingTop="@dimen/dp10" />

            </androidx.core.widget.NestedScrollView>

</LinearLayout>
