<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_scrollFlags="scroll|enterAlways|snap">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_block_counts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/card_margin_horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_block_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_block_counts"
            android:descendantFocusability="beforeDescendants"
            android:layout_margin="@dimen/dp8"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/dp16"
                    android:paddingStart="@dimen/dp16"
                    android:paddingTop="@dimen/dp16"
                    android:text="@string/app_name"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_preambula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_small"
                    android:gravity="top"
                    android:padding="@dimen/dp16"
                    android:layout_below="@id/about_caption" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/about_changelist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp13"
                    android:maxLines="2"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp16"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/changelog"
                    android:layout_toStartOf="@id/about_preambula"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/about_git"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/explore_git_src"
                    android:textSize="@dimen/sp13"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/dp10" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:layout_below="@+id/profile_block_about">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="0dp"
                android:paddingEnd="@dimen/dp16"
                android:paddingStart="@dimen/dp16"
                android:paddingTop="@dimen/dp16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp16"
                    android:text="@string/about_author"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:textSize="@dimen/font_size_small"
                    android:paddingBottom="@dimen/dp16" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>