<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/field_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="textMultiLine"
                android:fontFamily="monospace"
                tools:text="Input text"/>


            <Button
                android:id="@+id/btn_clear_input"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/clear"
                app:layout_constraintEnd_toStartOf="@+id/btn_copy_input"
                app:layout_constraintTop_toBottomOf="@+id/field_input" />

            <Button
                android:id="@+id/btn_copy_input"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy2clipboard"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_clear_input"
                app:layout_constraintEnd_toEndOf="@+id/field_input" />


            <EditText
                android:id="@+id/field_output"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_copy_input"
                android:fontFamily="monospace"
                tools:text="Output text"/>


            <Spinner
                android:id="@+id/spinner_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:entries="@array/baseAlgVal"
                android:spinnerMode="dropdown"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/field_output"/>


            <Button
                android:id="@+id/btn_paste_output"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paste"
                app:layout_constraintTop_toBottomOf="@id/field_output"
                app:layout_constraintEnd_toStartOf="@id/btn_copy_output"/>

            <Button
                android:id="@+id/btn_copy_output"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy2clipboard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>